# waylandify

./: README.md  pyproject.toml
src/waylandify/: desktop.py
