[project]
name = "waylandify"
version = "0.1.0"
description = "CLI to add Wayland support to Chromium-based programs via desktop files and argument flags."
readme = "README.md"
requires-python = ">=3.13"
authors = [{ name = "Jassiel Ovando", email = "jassielovando@protonmail.com" }]
dependencies = [
  "pydantic>=2.11.9",
  "tomlkit>=0.13.3",
  "typer>=0.19.2",
]

[project.scripts]
waylandify = "waylandify:main"

[dependency-groups]
dev = [
  "ruff>=0.13.1",
]

[build-system]
requires = ["uv_build>=0.8.21,<0.9.0"]
build-backend = "uv_build"
